--- a/_CSS/estilo_index.css
+++ b/_CSS/estilo_index.css
@@ -1,29 +1,48 @@
-
-
 /* Geral */
 @media screen {
-    body {
-        background: rgba(120, 255, 235, 0.5);
+  body {
+    background: rgba(120, 255, 235, 0.5);
 
-    }
+  }
 }
 
 /* PARA MOBILE */
-@media screen and (min-width: 320px) and (max-width: 480px) {
-    .container {
-        display: grid;
-        grid-template-columns: auto;
-        gap:2px;
-      }
-      .grid-item {
-        max-width: 100%;
-        height: 300px;
-      }
-      .grid-item:nth-child(even) {
-        background-color:aqua;
-      } 
-    
+@media screen and (min-width: 320px) and (max-width: 600px) {
+  .container {
+    display: grid;
+    grid-template-columns: auto;
+    gap: 2px;
+  }
 
+  .grid-item {
+    max-width: 100%;
+    height: 300px;
+  }
+
+  .grid-item:nth-child(even) {
+    background-color: aqua;
+  }
+}
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------- */
+/* ---------------------------------------------------------------------------------------------------------------------------------------------*/
+/* Para Ipads/Tablets */
+@media screen and (min-width: 601px) {
+
+  .container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 2px;
+  }
+
+  .grid-item {
+    max-width: 100%;
+    height: 300px;
+  }
+
+  .grid-item:nth-child(even) {
+    background-color: aqua;
+  }
 }
 
 /*--------------------------------------------------------------------------------------------------------------------------------------------- */
@@ -34,32 +53,32 @@
   .container {
     display: grid;
     grid-template-columns: auto auto auto;
-    gap:2px;
+    gap: 2px;
   }
+
   .grid-item {
     max-width: 100%;
     height: 300px;
   }
+
   .grid-item:nth-child(even) {
-    background-color:aqua;
+    background-color: aqua;
   }
-}
 
-/*--------------------------------------------------------------------------------------------------------------------------------------------- */
-/* ---------------------------------------------------------------------------------------------------------------------------------------------*/
-/* Para Ipads/Tablets */
-@media screen and (min-width: 481px) and (max-width: 768px) {
+  .item_1 {
+    grid-column: 1 / span 2;
+    grid-row: 1 / span 10;
+    background-color: white;
+    height: 100%;
+  }
 
-    .container {
-        display: grid;
-        grid-template-columns: auto auto auto;
-        gap:2px;
-      }
-      .grid-item {
-        max-width: 100%;
-        height: 300px;
-      }
-      .grid-item:nth-child(even) {
-        background-color:aqua;
-      }
+  .item_2 iframe {
+    height: 100%;
+    width: 100%;
+  }
+
+  .item_3 iframe {
+    height: 100%;
+    width: 100%;
+  }
 }
