--- a/_CSS/estilo_1.css
+++ b/_CSS/estilo_1.css
@@ -28,7 +28,7 @@
 }
 
 /* PARA MOBILE */
-@media screen and (min-width: 320px) and (max-width: 620px) {
+@media screen and (min-width: 320px) and (max-width: 600px) {
 
     /* Cabeçalho logo*/
     header {
@@ -123,7 +123,33 @@
         margin: 3px;
     }
 
-
+    header nav ul {
+        z-index: -1;
+    }
+    header nav ul .listaHGB{
+        z-index: 10;
+    }
+    /* SubLista  */
+    .subListaHGB{
+        display: none;
+       
+        
+    }
+    header nav ul .listaHGB:hover  .subListaHGB {
+        display: block;
+        position: absolute;
+        z-index: 20;
+        padding-top: 10px;
+        color: white;
+        background-color: rgba(47, 51, 43, 0.9);
+        border-radius: 10px;
+        width: 95%;
+    }
+    header nav ul .listaHGB:hover .subListaHGB > li {
+        display: block;
+        padding-top: 10px;
+        cursor:pointer;
+    }
     /* Rodapé */
 
     footer {
@@ -138,6 +164,140 @@
     footer p {
         text-align: center;
         margin-top: 5px;
+    }
+
+    footer a {
+        text-decoration: none;
+        color: white;
+        text-align: center;
+        display: block;
+    }
+
+}
+
+/* --------------------------------------------------------------------------------------------------------------------------------------------- */
+/* --------------------------------------------------------------------------------------------------------------------------------------------- */
+/* Para Ipads/Tablets */
+@media screen and (min-width: 601px) and (max-width: 768px) {
+
+    /* Cabeçalho logo*/
+    header {
+        width: 100%;
+        /* position: sticky;
+        z-index: var(--z-index-top);
+        position: -webkit-sticky;
+        top: 0;  */
+    }
+
+    #logo {
+        background: url(../_imagens/bandeira_gb.png) no-repeat;
+        background-size: 30%;
+        background-position-x: center;
+        background-position-y: center;
+    }
+
+    #fundo_logo {
+        background: url(../_imagens/vila.jpg);
+        background-size: contain;
+    }
+
+    #menu,
+    label {
+        display: none;
+    }
+
+    #logo {
+        color: transparent;
+        height: 120px;
+        margin: 0;
+        padding-bottom: 0;
+        text-align: center;
+    }
+
+    /* Área de navegação */
+    #menu {
+        display: none;
+    }
+
+    header nav {
+        display: inline-block;
+        background-color: rgb(26, 73, 213, 0.9);
+        margin-left: 0%;
+        margin-right: 0%;
+
+    }
+
+    /* header nav::-webkit-scrollbar{
+        scroll-margin-top:0%;
+    } */
+
+    header nav ul {
+        margin: 0;
+        padding-left: 0;
+
+    }
+
+    header nav ul li {
+        display: inline-block;
+        list-style-type: none;
+        border: 3px solid transparent;
+        border-radius: 8px;
+        padding: 5px;
+        margin: 3px;
+    }
+
+    header nav ul li a {
+        text-decoration: none;
+        text-transform: uppercase;
+        color: white;
+    }
+
+    header nav ul li:hover {
+        background-color: rgb(124, 226, 177);
+        border-color: aqua;
+        transition: 0.5s;
+    }
+
+    header nav ul {
+        z-index: -1;
+    }
+    header nav ul .listaHGB{
+        z-index: 10;
+    }
+    /* SubLista  */
+    .subListaHGB{
+        display: none;
+       
+        
+    }
+    header nav ul .listaHGB:hover  .subListaHGB {
+        display: block;
+        position: absolute;
+        z-index: 20;
+        padding-top: 10px;
+        color: white;
+        background-color: rgba(47, 51, 43, 0.9);
+        border-radius: 10px;
+        width: 17%;
+    }
+    header nav ul .listaHGB:hover .subListaHGB > li {
+        display: block;
+        padding-top: 10px;
+        cursor:pointer;
+    }
+
+    /* Rodapé */
+    footer {
+        flex-shrink: 0;
+        margin: auto;
+        background-color: black;
+        color: white;
+        width: 100%;
+    }
+
+    footer p {
+        text-align: center;
+
     }
 
     footer a {
@@ -233,7 +393,33 @@
         transition: 0.5s;
     }
 
-
+    header nav ul {
+        z-index: -1;
+    }
+    header nav ul .listaHGB{
+        z-index: 10;
+    }
+    /* SubLista  */
+    .subListaHGB{
+        display: none;
+       
+        
+    }
+    header nav ul .listaHGB:hover  .subListaHGB {
+        display: block;
+        position: absolute;
+        z-index: 20;
+        padding-top: 10px;
+        color: white;
+        background-color: rgba(47, 51, 43, 0.9);
+        border-radius: 10px;
+        width: 17%;
+    }
+    header nav ul .listaHGB:hover .subListaHGB > li {
+        display: block;
+        padding-top: 10px;
+        cursor:pointer;
+    }
     /* Rodapé */
     footer {
         position: relative;
@@ -256,112 +442,7 @@
 
 }
 
-/* --------------------------------------------------------------------------------------------------------------------------------------------- */
-/* --------------------------------------------------------------------------------------------------------------------------------------------- */
-/* Para Ipads/Tablets */
-@media screen and (min-width: 621) and (max-width: 768px) {
 
-    /* Cabeçalho logo*/
-    header {
-        width: 100%;
-        /* position: sticky;
-        z-index: var(--z-index-top);
-        position: -webkit-sticky;
-        top: 0;  */
-    }
-
-    #logo {
-        background: url(../_imagens/bandeira_gb.png) no-repeat;
-        background-size: 30%;
-        background-position-x: center;
-        background-position-y: center;
-    }
-
-    #fundo_logo {
-        background: url(../_imagens/vila.jpg);
-        background-size: contain;
-    }
-
-    #menu,
-    label {
-        display: none;
-    }
-
-    #logo {
-        color: transparent;
-        height: 120px;
-        margin: 0;
-        padding-bottom: 0;
-        text-align: center;
-    }
-
-    /* Área de navegação */
-    #menu {
-        display: none;
-    }
-
-    header nav {
-        display: inline-block;
-        background-color: rgb(26, 73, 213, 0.9);
-        margin-left: 0%;
-        margin-right: 0%;
-
-    }
-
-    /* header nav::-webkit-scrollbar{
-        scroll-margin-top:0%;
-    } */
-
-    header nav ul {
-        margin: 0;
-        padding-left: 0;
-
-    }
-
-    header nav ul li {
-        display: inline-block;
-        list-style-type: none;
-        border: 3px solid transparent;
-        border-radius: 8px;
-        padding: 5px;
-        margin: 3px;
-    }
-
-    header nav ul li a {
-        text-decoration: none;
-        text-transform: uppercase;
-        color: white;
-    }
-
-    header nav ul li:hover {
-        background-color: rgb(124, 226, 177);
-        border-color: aqua;
-        transition: 0.5s;
-    }
-
-
-    /* Rodapé */
-    footer {
-        flex-shrink: 0;
-        margin: auto;
-        background-color: black;
-        color: white;
-        width: 100%;
-    }
-
-    footer p {
-        text-align: center;
-
-    }
-
-    footer a {
-        text-decoration: none;
-        color: white;
-        text-align: center;
-        display: block;
-    }
-
-}
 
 
 
