--- a/_CSS/estilo_histGB.css
+++ b/_CSS/estilo_histGB.css
@@ -3,17 +3,15 @@
     box-sizing: border-box;
 }
 /* Geral */
-@media screen {
- 
-}
+
 /* PARA MOBILE */
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) and (max-width: 600px) {
+
     main section article p {
         text-align: justify;
         margin: 3px;
     }
     main section article {
-        margin:auto;
         line-height: 25px;
     }
     main section article h1, h2 {
@@ -24,24 +22,67 @@
     }
         /* Imagens de section article */
         main section article img {
-            float:left;
             width: 250px;
             padding-right: 4px;
+            
         }
    /* Formatando o mapa da Guiné-Bissau */
    #mapaGB {
-       width: 100%;
+       width: 10%;
+       
    }
    #mapaGB iframe {
-       max-width: 100%;
-       height: 50%;
+      display: none;
    }
     .div-esquerda-cima {
        display: none;
     }
+    .div-esquerda-cima figcaption{
+        display: none;
+     }
  
 }
 
+
+/* Ipads / Tablets */
+/* =================================================================================================================== */
+@media screen and (min-width: 601px) {
+
+
+    body {
+        width: 320%;
+    }
+   /* Main */
+   main section article p {
+       text-align: justify;
+       margin: 3px;
+   }
+   main section article {
+       margin:auto;
+       line-height: 25px;
+   }
+   main section article h1, h2 {
+       border-top: 2px solid gray;
+   }
+   main section article h2:nth-child(1) {
+       text-align: center;
+   }
+   /* main section article aside {
+       border: 3px solid red;
+       float: right;
+       height: 300px;
+       width: 20%;
+   } */
+   .div-esquerda-cima {
+       width: 24%;
+       position: absolute;
+       height: 100%;
+       background-color: green;
+       left: 0.5%;
+       top:45%;
+   }
+  
+}
 /* Desktop */
 /* ====================================================================================================================== */
 @media screen and (min-width:769px){
@@ -89,41 +130,3 @@
 }
 
 
-/* Îpads / Tablets */
-/* =================================================================================================================== */
-@media screen and (min-width: 481px) and (max-width: 768px) {
-
-
-
-   /* Main */
-   main section article p {
-       text-align: justify;
-       margin: 3px;
-   }
-   main section article {
-       width: 50%;
-       margin:auto;
-       line-height: 25px;
-   }
-   main section article h1, h2 {
-       border-top: 2px solid gray;
-   }
-   main section article h2:nth-child(1) {
-       text-align: center;
-   }
-   /* main section article aside {
-       border: 3px solid red;
-       float: right;
-       height: 300px;
-       width: 20%;
-   } */
-   .div-esquerda-cima {
-       width: 24%;
-       position: absolute;
-       height: 100%;
-       background-color: green;
-       left: 0.5%;
-       top:45%;
-   }
-  
-}
