--- a/_CSS/fotos_interessantes.css
+++ b/_CSS/fotos_interessantes.css
@@ -7,7 +7,11 @@ h1 {
 }
 
 /* PARA MOBILE */
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 320px) {
+
+  h1 {
+    font-size: 20px;
+  }
 /* Deixando o conjunto das fotorafias em formato de grid */
 .container {
   display: flex;
@@ -58,19 +62,72 @@ position: relative;
 }
 
 /*--------------------------------------------------------------------------------------------------------------------------------------------- */
+/* ---------------------------------------------------------------------------------------------------------------------------------------------/*
+/* Para Ipads/Tablets */
+@media only screen and (min-width: 601px) {
+  /* Deixando o conjunto das fotorafias em formato de grid */
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+  /* Definindo tamanho máximo das imagens nas suas respectivas células */
+  .container .grid-item {
+  width: 50%;
+  position: relative;
+  }
+  .grid-item img {
+  max-width: 100%;
+  }
+  /* Deixando as secções em posição relativa para que o figcaption consiga se movimentar para cima */
+  .grid-item {
+  position: relative;
+  }
+  
+  
+  /* Formatando o figcaption das imagens */
+  .grid-item figcaption {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    color: white;
+    background-color: black;
+    font-size: 14px;
+    opacity: 50%;
+    width:max-content;
+  }
+   /* Transição das fotos */
+   .grid-item:hover {
+      cursor: pointer;
+      background-color: black;
+      opacity: 50%;
+      transition: 0.20s;
+  }
+  .grid-item img:hover{
+     cursor: pointer;
+     transform: translateY(20px);
+     transition: 0.5s;
+     color: rgb(0,0,0);
+     opacity: 0.5; 
+  }
+  }
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------- */
 /* ---------------------------------------------------------------------------------------------------------------------------------------------*/
 
 /* PARA DESKTOP */
-@media screen and (min-width: 769px) {
+@media only screen and (min-width: 769px) {
 /* Deixando o conjunto das fotorafias em formato de grid */
    .container {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
+       align-items: center;
+       justify-content: center;
    }
 /* Definindo tamanho máximo das imagens nas suas respectivas células */
 .container .grid-item {
-  width: 48%;
+  width: 45%;
   position: relative;
 }
  .grid-item img {
@@ -109,53 +166,3 @@ position: relative;
 }
 }
 
-/*--------------------------------------------------------------------------------------------------------------------------------------------- */
-/* ---------------------------------------------------------------------------------------------------------------------------------------------/*
-/* Para Ipads/Tablets */
-@media screen and (min-width: 481px) and (max-width: 768px) {
-/* Deixando o conjunto das fotorafias em formato de grid */
-.container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-/* Definindo tamanho máximo das imagens nas suas respectivas células */
-.container .grid-item {
-width: 100%;
-position: relative;
-}
-.grid-item img {
-max-width: 100%;
-}
-/* Deixando as secções em posição relativa para que o figcaption consiga se movimentar para cima */
-.grid-item {
-position: relative;
-}
-
-
-/* Formatando o figcaption das imagens */
-.grid-item figcaption {
-  position: absolute;
-  top: 5px;
-  left: 5px;
-  color: white;
-  background-color: black;
-  font-size: 30px;
-  opacity: 50%;
-  width:max-content;
-}
- /* Transição das fotos */
- .grid-item:hover {
-    cursor: pointer;
-    background-color: black;
-    opacity: 50%;
-    transition: 0.20s;
-}
-.grid-item img:hover{
-   cursor: pointer;
-   transform: translateY(20px);
-   transition: 0.5s;
-   color: rgb(0,0,0);
-   opacity: 0.5; 
-}
-}
